--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -15,13 +15,10 @@
 
 		<div>
 			<a href="/rango/index/">Index</a><br />
-			<img src=\"{settings.STATIC_URL}images/rango.jpg\"
-				alt="Picture of Rango" />
-		</div>
-
-		<div>	
-			<img src=\"{{ MEDIA_URL }}cat.jpg"
-				alt="Picture of a Cat."/>
+			<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+		
+			<img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a Cat." />
+			
 		</div>
 
 
