--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -15,11 +15,8 @@
 			<strong>{{ boldmessage }}</strong>
 		
 		</div>
-		
-		<h2>Most Liked Categories</h2>
-		<div>
 		{% if categories %}
-			
+		<div>
 			<ul>
 			{% for category in categories %}
 				<li>
@@ -32,25 +29,10 @@
 		{% endif %}
 		</div>
 
-		<h2>Most Viewed Pages</h2>
-		<div>
-		{% if pages %}
-			
-			
-			<ul>
-			{% for page in pages %}
-				<li><a href="{{ page.url }}">{{ page.title }}</a></li>
-				{% endfor %}
-			</ul>
-			{% else %}
-			<strong>There are no pages present.</strong>
-			{% endif %}
-		</div>
-
-
 		<div>
 			<a href="/rango/abput/">About Rango</a><br />
 			<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+			<a href="/rango/add_category/">Add a New Category</a><br />
 		</div>
 	</body>
 
