--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -12,6 +12,7 @@
 	<div>
 		here is the about page <br />	
 		<strong>This tutorial has been put together by Ioannis Kyriacou</strong><br />
+		<p>Visits: {{ visits }}</p>
 	</div>
 
 	<div>
